made changes to js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="results">View Results</div>
     <ul></ul>
   </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./app.js"></script>
   <footer>&copy Corsetti 2022</footer>
 </body>
